--- a/reportportal.properties
+++ b/reportportal.properties
@@ -4,3 +4,4 @@ rp.launch = jack_TEST_EXAMPLE
 rp.project = my_test_project
 rp.launch = Test001
 rp.description = Description001
+ZeileMaster1=master1
